force-app/main/default/objects/Invoices__c/fields/AmountWithVat__c.field-meta.xml
<CustomField>
    <fullName>AmountWithVat__c</fullName>
    <formula>(AmountWithoutVat__c * Vat__c )+AmountWithoutVat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount With Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>