force-app/main/default/objects/Invoices__c/fields/CaseAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>CaseAssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Assigned To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>