force-app/main/default/objects/Invoices__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>