force-app/main/default/objects/Invoices__c/fields/LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>LastPaymentDate__c</fullName>
    <label>Last payment date</label>
    <type>DateTime</type>
</CustomField>